- MWE besser formuliert - Beweis zum Satz von Liouville verbessert - Beweis zum Fundamentalsatz anders formuliert
git-svn-id: https://svn.lug-jena.de/uni-skripte@794 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-ana3/skript.latex
+++ b/schmeisser-ana3/skript.latex
@@ -3178,8 +3178,6 @@ Differentialgleichung}:
       &= \Big(2\sqrt{t} \int_{-\infty}^{\infty} e^{-\rho^{2}}d\rho\Big)^{n} =
          2^{n} t^{\frac{n}{2}} \pi^{\frac{n}{2}} = (4\pi t)^{\frac{n}{2}}
     \end{align*}
-
-    (2) folgt durch hinsehen
   \end{proof}
 \end{lemma}
 
@@ -3470,6 +3468,7 @@ Gesucht ist $u(x,t)$.
 \end{satz}
 
 \begin{bemerk}[Lösungsansatz des Cauchy-Problems]
+  Wir verwenden $u=v+w$ mit:
   \hfill
   \begin{minipage}[t]{.45\linewidth}
     \begin{gather}\label{eq:24}
@@ -5683,7 +5682,7 @@ $\int_{\Gamma} f(z)\,dz =0$.
 
   \begin{proof}
     Wir betrachten das sternförmige Gebiet $\Omega :=
-    K_{r+\epsilon}(z_{0})$ (existiert, das $G$ offen ist). Für $z\in G$
+    K_{r+\epsilon}(z_{0})$ (existiert, da $G$ offen ist). Für $z\in G$
     ist
     \begin{gather*}
       h(\zeta) := \begin{cases}
@@ -5719,18 +5718,17 @@ $\int_{\Gamma} f(z)\,dz =0$.
 % 7. Feb. 06
 
 \begin{bemerk}
-  Für $z=z_{0}$ gilt
-  \begin{gather*}
-    f(z_{0}) = \frac{1}{2\pi i} \oint_{\abs{\zeta-z_{0}}=r}
-       \frac{f(\zeta)}{\zeta-z_{0}}d\zeta,\qquad \zeta-z_{0} = re^{it}
-  \end{gather*}
-  $\Rightarrow$
-  \begin{gather*}
-    f(z_{0}) = \frac{1}{2\pi} \int_{0}^{2\pi} f(z_{0}+r e^{it})\,dt =
-       \frac{1}{2\pi i} \int_{0}^{2\pi} \frac{f(z_{0}+ re^{it})}{re^{it}}
-       ire^{it}\,dt
-  \end{gather*}
-  \emph[rand=Mit\-tel\-wert\-ei\-gen\-schaft]{Mittelwerteigenschaft}
+  Für $z=z_{0}$ gilt die
+  \emph[rand=Mit\-tel\-wert\-ei\-gen\-schaft]{Mittelwerteigenschaft}:
+  \begin{align*}
+    f(z_{0}) &= \frac{1}{2\pi i} \oint_{\abs{\zeta-z_{0}}=r}
+       \frac{f(\zeta)}{\zeta-z_{0}}d\zeta,\qquad \zeta-z_{0} =
+       re^{it}, d\zeta= ire^{it}dt\\
+    &= \frac{1}{2\pi i} \int_{0}^{2\pi} \frac{f(z_{0}+
+       re^{it})}{re^{it}} ire^{it}\,dt\\
+    \Rightarrow f(z_{0}) &= \frac{1}{2\pi} \int_{0}^{2\pi} f(z_{0} +
+       re^{it})\,dt
+  \end{align*}
 \end{bemerk}
 
 \begin{lemma}
@@ -6169,7 +6167,7 @@ mehr isoliert zu sein.
 
   Wir können also die Umlaufzahl wie folgt beschreiben
   \begin{gather*}
-    n = \frac{1}{2\pi i}\int_{\Gamma} \frac{dt}{z-z_{0}}
+    n = \frac{1}{2\pi i}\int_{\Gamma} \frac{dz}{z-z_{0}}
   \end{gather*}
 \end{bemerk}
 
@@ -6215,7 +6213,8 @@ mehr isoliert zu sein.
 \end{folger}
 
 \begin{folger}[Allgemeine Cauchy-Integralformel]
-  Auf einem einfach zusammenhängendes Gebiet $G$ mit einer geschlossene stückweise glatte
+  Auf einem einfach zusammenhängenden Gebiet $G$ mit einer
+  geschlossenen stückweise glatten
   Kurve $\Gamma\subset G$ und einer holomorphen Funktion $f\colon
   G\rightarrow\C$ gilt für einen Punkt $z\in G$, der nicht von $\Gamma$
   durchlaufen wird:
@@ -6393,7 +6392,7 @@ mehr isoliert zu sein.
 \end{defini}
 
 \begin{satz}[Satz von Liouville]\label{satz:10.4.2/2}
-  $f$ ganze analytische Funktion. $\exists c>0, n\in\N_{0}$, so dass
+  Sei $f$  eine ganze analytische Funktion. $\exists c>0, n\in\N_{0}$, so dass
   $\forall z\in\C\colon \abs{f(z)}\leq c(1+\abs{z})^{n}$. Dann ist $f$
   ein Polynom höchstens $n$-ten Grades.
 
@@ -6403,11 +6402,12 @@ mehr isoliert zu sein.
     $a_{k}=\frac{1}{2\pi i}\int_{\abs{z}=r} \frac{f(z)}{z^{k+1}}dz$,
     wobei $0<r<\infty$ (nach \autoref{satz:10.2.4/6}).
 
-    Nach Vorrausetzung ist $\abs{z}>1$:
+    Nach Vorrausetzung ist $\abs{z}>1$ und es gilt $\abs{f(z)} \leq
+    2^{n} c \abs{z}^{n}$. Denn $c(1+\abs{z})^{n}\leq c(\abs{z}+
+    \abs{z})^{n}= c(2\abs{z})^{n}= c2^{n}\abs{z}^{n}$. 
     \begin{align*}
-      \abs{f(z)} &\leq 2^{n} c \abs{z}^{n}\\
       \Rightarrow^{r>1} \abs{a_{k}} &\leq \frac{1}{2\pi} \sup\big(
-	 \frac{f(z)}{z^{k+1}}\big) \int_{\abs{z}=r}\,dz
+	 \frac{f(z)}{z^{k+1}}\big) \int_{\abs{z}=r}\,dz= 
 	 \frac{1}{2\pi} 2^{n} c \frac{r^{n}}{r^{k+1}} \underbrace{2\pi
 	 r}_{=L(\Gamma)}\\
       &= c_{1} \frac{1}{r^{k-n}} \xrightarrow{r\rightarrow\infty} 0
@@ -6418,8 +6418,8 @@ mehr isoliert zu sein.
 \end{satz}
 
 \begin{folger}
-  Für $n=0$ im Satz \autoref{satz:10.4.2/2} ergibt sich, dass konstante
-  Funktionen die einizgsten ganzen analytischen Funktionen in $\C$ sind.
+  Wenn $f$ eine ganze analytische Funktion und beschränkt ist, folgt,
+  dass $f$ konstant ist ($n=0$ in \autoref{satz:10.4.2/2}).
 \end{folger}
 
 \begin{satz}[Fundamentalsatz der Algebra]
@@ -6427,10 +6427,9 @@ mehr isoliert zu sein.
   Nullstelle $z_{0}\in\C$.
 
   \begin{proof}
-    indirekt. Annahme $P(z) \ne0$ $\forall z$ $\Rightarrow$
-    $\frac{1}{P(z)}$ ist holomorph und beschränkt $\Rightarrow$
-    $^{Folgerung 3}$ $\frac{1}{P(z)}$ ist konstant $\Rightarrow$
-    Widerspruch zu $n\geq 1$
+    Der Beweis erfolgt indirekt. Annahme: Für alle $z$ sei $P(z) \ne0
+    \Rightarrow\frac{1}{P(z)}$ ist holomorph und beschränkt (nach der
+    obigen Folgerung). $\Rightarrow$ Widerspruch zu $n\geq 1$
   \end{proof}
 \end{satz}
 
