--- a/hempel-info4/skript.latex
+++ b/hempel-info4/skript.latex
@@ -13,11 +13,11 @@
 %  rubber traut sich nicht die folgenden Dateien zu löschen, weil er nicht
 %  weiß, dass er sie aus der .pdf-Datei erzeugt hat.
 
-\documentclass[halfparskip*,german,draft,twoside]{scrreprt}
+\RequirePackage[l2tabu,orthodox]{nag}  % nag überprüft den Text auf veraltete
+                   % Befehle oder solche, die man nicht in LaTeX verwenden
+                   % soll -- l2tabu-Checker in LaTeX
 
-\usepackage[l2tabu,orthodox]{nag}  % nag überprüft den Text auf verältete Befehle
-                          % oder solche, die man nicht in LaTeX verwenden
-                          % soll -- l2tabu-Checker in LaTeX
+\documentclass[halfparskip*,german,draft,twoside]{scrreprt}
 
 \usepackage{ifthen}
 
@@ -145,10 +145,9 @@
 \makeindex
 
 \DeclareGraphicsRule{.1}{\ifpdf mps\else eps\fi}{*}{}
-\DeclareGraphicsRule{.2}{\ifpdf mps\else eps\fi}{*}{}
 
 \SVN $LastChangedRevision$
-\SVN $LastChangedDate$ 
+\SVN $LastChangedDate$
 
 \begin{document}
 
@@ -589,7 +588,7 @@ DFAs lassen sich sehr elegant durch sogenannte Überführungsgraphen darstellen.
 			b      & z_0 & z_3 & z_0 & z_3
 		\end{array}
 	\end{displaymath}
-	\begin{center}\includegraphics{blatt5}\end{center}
+	\begin{center}\includegraphics{blatt5.1}\end{center}
 
 	Abarbeitung: von abba: $z_0\ra^{a} z_1\ra^{b} z_3\ra^{b} z_3\ra^{a} z_3$\\
 	abba wird akzeptiert, baba wird auch akzeptiert, \emph{aber} alle Wörter
@@ -618,7 +617,7 @@ denen sich $M$ nach Abarbeitung in einem Zustand aus $Z_E$ befindet.
 
 \begin{bsp}\label{bsp:2.1.2}
 	Baue DFA für $A=\{w\in \{a,b\}^{*}\colon w \mathrm{ beginnt mit } a\}$
-	\begin{center}\includegraphics{blatt5-2}\end{center}
+	\begin{center}\includegraphics{blatt5-2.1}\end{center}
 \end{bsp}
 
 \begin{satz}\label{satz:2.1.3}
@@ -703,7 +702,7 @@ so definiert:
 Die von einem NFA $N$ akzeptierte Sprache $L(N)$ ist definiert als
 \[ L(N) = \{ w\in \Sigma^{*}\colon \delta^{*}(w,Z_0)\cap Z_E\ne \emptyset \} \]
 \begin{bsp}\label{bsp:2.2.1}
-	\begin{center}\includegraphics{blatt6}\end{center}
+	\begin{center}\includegraphics{blatt6.1}\end{center}
 	\begin{align*}
 		\delta^{*}(1,z_0) &= \delta^{*}(\varepsilon,\delta(1,z_0))\cup
 		  \delta^{*}(\varepsilon,\delta(1,z_3))\cup
@@ -728,7 +727,7 @@ Eine "`fast"' Umkehrung von Satz \ref{satz:2.1.3}:
 		\ref{def:1.3.2} gibt es eine reguläre Grammatik $G=(\Sigma,N,S,R)$ mit
 		$\L(G)=A$.\\
 		\underline{Idee}: $G\colon A\ra aB,\ A\ra aC,\ A\ra a$ NFA:
-		\begin{center}\includegraphics{blatt7}\end{center}
+		\begin{center}\includegraphics{blatt7.1}\end{center}
 
 		Wir betrachten folgenden NFA $N=(\Sigma,Z,Z_0,\delta,Z_E)$:
 		\begin{gather*}
@@ -772,9 +771,9 @@ Eine "`fast"' Umkehrung von Satz \ref{satz:2.1.3}:
 		$L(N)=A$. Wir wollen einen DFA $M$ konstruieren, so dass $L(M)=A$.
 
 		\underline{Idee}: NFA bei Abarbeitung $a_1 a_2\dots a_n$
-		\begin{center}\includegraphics{blatt7-2}\end{center}
+		\begin{center}\includegraphics{blatt7-2.1}\end{center}
 		\underline{DFA}: Zustände sind Mengen von Zuständen des NFA:
-		\begin{center}\includegraphics{blatt7-3}\end{center}
+		\begin{center}\includegraphics{blatt7-3.1}\end{center}
 		Wir definieren den DFA $M=(\Sigma,Z^{'},z_0,\delta^{'},Z_{E}^{'})$
 		so:
 		\begin{gather*}
@@ -806,7 +805,7 @@ Eine "`fast"' Umkehrung von Satz \ref{satz:2.1.3}:
 \begin{bsp}\label{bsp:2.2.3}
 	NFA $N=(\{0,1\},\{z_0,z_1,z_2\},\{z_0,z_1,z_2\},\delta,\{z_2\})$
 	\[ L(N)=\{0^i 1^j\colon i\in \{0,1,2\}\wedge j\in\N\} \]
-	\begin{center}\includegraphics{blatt8}\end{center}
+	\begin{center}\includegraphics{blatt8.1}\end{center}
 
 	DFA $M=(\{0,1\},\PP(\{z_0,z_1,z_2\}), \{z_0,z_1,z_2\},\delta^{'},
 	\{\{z_2\},\{z_1,z_2\},\{z_0,z_2\},\{z_0,z_1,z_2\}\})$.
@@ -1062,7 +1061,7 @@ $X_i = \{a_1\}X_1 \cup \{a_2\} X_2 \cup \dots \cup \{a_n\}X_n$ schreiben.
 	$Y = $ ähnlich, allerdings zu langer Ausdruck
 
 	Folgender NFA: $N$
-	\begin{center}\includegraphics{blatt11}\end{center}
+	\begin{center}\includegraphics{blatt11.1}\end{center}
 	Gleichungssysteme:
 	\begin{align*}
 		X &= \{0\}X\cup \{1\}Y\cup \emptyset^{*}\\
