- * macht ntheorem selbst
git-svn-id: https://svn.lug-jena.de/uni-skripte@804 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/fichtner-ewms/skript.tex
+++ b/fichtner-ewms/skript.tex
@@ -79,7 +79,7 @@
 % Die folgenden Umgebungen werden einzeln nummeriert und am Ende jedes
 % Kapitels zurückgesetzt
 \newtheorem{satz}{Satz}[section]
-\newtheorem*{satz*}{Satz o.\,B.}
+%\newtheorem*{satz*}{Satz o.\,B.}
 %\newtheorem{bemerk}{Bemerkung}[chapter]
 %\newtheorem{defini}{Definition}[chapter]
 %\newtheorem{bsp}{Beispiel}[chapter]
