--- a/fichtner-ewms/skript.tex
+++ b/fichtner-ewms/skript.tex
@@ -590,22 +590,22 @@ $\sigma$-Algebra über $\Omega$.
   \begin{enumerate}[(a)]
   \item $\mu(A \cup B)\leq\mu(A)+\mu(B)$
   \item $A\subseteq B\Rightarrow \mu(A)\subseteq\mu(B)$
-  \item $A\subseteq B, \mu$ endlich $\Rightarrow \mu(B\backslash A) =
+  \item $A\subseteq B, \mu$ endlich $\Rightarrow \mu(B\setminus A) =
     \mu(B) -\mu(A)$
   \end{enumerate}
 \end{satz}
 \begin{proof}
   \begin{itemize}
-  \item[zu (b) und (c)] $A\subseteq B\Rightarrow B=A\cup(B\backslash
-    A) \Rightarrow\mu(B)=\mu(a\cup(B\backslash
-    A))\overset{\text{\ref{satz:folgenmass}}}{=} \mu(A)+\mu(B\backslash A)$
-    Wir haben $\mu(B\backslash A)\geq 0\Rightarrow\mu(A)\leq\mu(B)$
-    Durch Umstellen erhält man $\mu(B\backslash A)=\mu(B) -
+  \item[zu (b) und (c)] $A\subseteq B\Rightarrow B=A\cup(B\setminus
+    A) \Rightarrow\mu(B)=\mu(a\cup(B\setminus
+    A)) \overset{\text{\ref{satz:folgenmass}}}{=} \mu(A)+\mu(B\setminus A)$
+    Wir haben $\mu(B\setminus A)\geq 0\Rightarrow\mu(A)\leq\mu(B)$
+    Durch Umstellen erhält man $\mu(B\setminus A)=\mu(B) -
     \mu(A)$. Hierzu muss $\mu(A)<+\infty$ sein.
-  \item[ zu (a)] $A\cup B=A\cup (B\backslash A)\Rightarrow \mu(A\cup
-    B)= \mu(A)\cup\mu(B\backslash A)=\mu(A)+\mu(B\backslash A)$\\
-    Es gilt: $B\backslash A\subseteq B\overset{(b)}{\Rightarrow}
-    \mu(B\backslash A)\subseteq\mu(B)\Rightarrow\mu(A\cup B)\leq
+  \item[ zu (a)] $A\cup B=A\cup (B\setminus A)\Rightarrow \mu(A\cup
+    B)= \mu(A)\cup\mu(B\setminus A)= \mu(A)+\mu(B\setminus A)$\\
+    Es gilt: $B\setminus A\subseteq B\overset{(b)}{\Rightarrow}
+    \mu(B\setminus A)\subseteq\mu(B)\Rightarrow\mu(A\cup B)\leq
     \mu(A) +\mu(B)$
   \end{itemize}
 \end{proof}
@@ -627,7 +627,7 @@ $\sigma$-Algebra über $\Omega$.
 \end{satz}
 \begin{proof}
   \begin{itemize}
-  \item[zu a)] Setzen $B_1:=A_1, B_{n+1}=A_{n+1}\backslash A_n$. Damit
+  \item[zu a)] Setzen $B_1:=A_1, B_{n+1}=A_{n+1}\setminus A_n$. Damit
     gelten folgende Tatsachen:
     \begin{enumerate}
     \item Alle $B_k$ sind paarweise disjunkt.
@@ -645,14 +645,12 @@ $\sigma$-Algebra über $\Omega$.
     wachsend. Nach (a) gilt nun: $\mu(\bigcup_{n=1}^\infty A_n^c) =
     \lim_{n\rightarrow\infty} \mu(A_n^c)$\\
     $\mu(\bigcup_{n=1}^\infty A_n^c)=\mu((\bigcap_{n=1}^\infty
-    A_n)^c)= \mu(\Omega\backslash(\bigcap_{n=1}^\infty A_n))
-    \overset{\text{\ref{satz:elemEigen} c}}{=} \mu(\Omega)-\mu(\bigcap
-    A_n)$\\
-    $\mu(A_n^c)=\mu(\Omega\backslash A_n)=\mu(\Omega)-\mu(A_n)
+    A_n)^c)= \mu(\Omega\setminus(\bigcap_{n=1}^\infty A_n))
+     \overset{\text{\ref{satz:elemEigen} c}}{=} \mu(\Omega)-\mu(\bigcap A_n)$\\
+    $\mu(A_n^c)=\mu(\Omega\setminus A_n)=\mu(\Omega)-\mu(A_n)
     \Rightarrow \lim_{n\rightarrow\infty} \mu(A_n)$
   \end{itemize}
 \end{proof}
-
 
 \section{Produkte von Maßräumen}
 
@@ -780,11 +778,11 @@ der Grundmenge $\Omega=\times_{i=1}^n \Omega_i$ zu bauen.
   \item Es gilt $[a,b]=[a,b)\cup\{b\}$. Die Vereinigung beider Mengen ist
     leer ($[a,b)\cap\{b\}=\emptyset$). Damit folgt: $\ell([a,b])=
     \ell([a,b)\cup \{b\})= \ell([a+b))+\ell(\{b\})=b-1+0$
-  \item $(a,b]=[a,b]\backslash \{a\}$\\
+  \item $(a,b]=[a,b]\setminus \{a\}$\\
     Es ist klar, dass $\{a\}$ in $[a,b]$ liegt. Damit folgt nach Punkt
     c des Satzes \ref{satz:elemEigen}: $\ell((a-b]) = \ell([a,b])-
     \ell(\{a\})= (b-a) - 0 = b-a$
-  \item $(a-b)=(a,b]\backslash \{b\}$\\
+  \item $(a-b)=(a,b]\setminus \{b\}$\\
     Wie schon oben ist klar, dass $\{b\}$ in $(a,b]$ liegt. Nach
     gleichem Schluss folgt auch hier: $\ell((a-b)) = \ell((a,b])-
     \ell(\{b\})= (b-a) - 0 = b-a$
@@ -827,7 +825,7 @@ der Grundmenge $\Omega=\times_{i=1}^n \Omega_i$ zu bauen.
   \begin{enumerate}[(a)]
   \item klar, da $P(\emptyset)\leq P(B)\leq P(\Omega)\Rightarrow 0\leq
     P(B)\leq 1$
-  \item $B^c=\Omega\backslash B, B\subseteq\Omega\Rightarrow P(B^c)=
+  \item $B^c=\Omega\setminus B, B\subseteq\Omega\Rightarrow P(B^c)=
     P(\Omega)-P(B)\Rightarrow P(B^c)=1-P(B)$ 
   \end{enumerate}
 \end{proof}
@@ -973,9 +971,9 @@ der Grundmenge $\Omega=\times_{i=1}^n \Omega_i$ zu bauen.
 \end{satz}
 \begin{proof}
   \begin{enumerate}[zu (1)]
-  \item $(-\infty, b)\backslash (-\infty, a)= [a,b)$ und $(-\infty,
+  \item $(-\infty, b)\setminus (-\infty, a)= [a,b)$ und $(-\infty,
     a)\subseteq (-\infty, b)$. Nach Satz \ref{satz:elemEigen}~c ist
-    $P([a,b))= P((-\infty, b))\backslash (-\infty, a))=P((-\infty,
+    $P([a,b))= P((-\infty, b))\setminus (-\infty, a))=P((-\infty,
     b))- P((-\infty, a))= F(b)-F(a)$
   \item $\{a\}=\bigcap_{n\geq 1} [a,a+\frac{1}{n})$ und
     $[a,a+\frac{1}{n}) \supseteq [a,a+\frac{1}{n+1})$. Wegen Satz
